--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     
 </head>
 <body>
+
+  <script src="/js/js.js"></script>
     <h1>Curriculum Vitae</h1>
 
 
@@ -60,6 +62,10 @@
           <li>Bootstrap</li>
 
            </div>
+
+           <hr>
+
+           <p> <a href="javascript:popUp('idiomas.html')">Conocer idiomas que manejo</a></p>
  
 
         </p>
@@ -94,7 +100,7 @@
 
       <p>
 
-
+      
 
       </p>
 
