--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
 
+    <meta property="og:title" content="CV Proyecto Final Argentina Programa" />
+ <meta property="og:type" content="article" />
+ <meta property="og:url" content=" http://diegobussi.github.io" />
+ <meta property="og:image" content=" https://diegobussi.github.io/img/681648-48226-messi-2520con-2520la-2520copa.jpg" />
+ <meta property="og:description" content="Descripcion" />
+
 
 
 
