--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             <br> 2007 – 2011 Ingeniería de Telecomunicaciones, Universidad de Navarra
            </p>
            <hr>
+           <p>Habilidades:</p>
            <hr>
            <div id="habilidades">
 
