--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <meta property="og:type" content="article" />
  <meta property="og:url" content=" http://diegobussi.github.io" />
  <meta property="og:image" content=" https://diegobussi.github.io/img/681648-48226-messi-2520con-2520la-2520copa.jpg" />
- <meta property="og:description" content="Descripcion" />
+ <meta property="og:description" content="HTML + CSS + JS" />
 
 
 
